Kibana/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: elasticsearch-demo
  labels:
    application: kibana
    environement: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kibana
  template:
    metadata:
      labels:
        application: kibana
        environement: demo
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5601
